--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
             Frank R Castillo
         </title>
         <style>
-            html { -khtml-user-select: none; -o-user-select: none; -moz-user-select: none;
-                   -webkit-user-select: none; user-select: none; } 
-            body { margin-bottom: 0px; margin-left: 0px; margin-right: 0px; margin-top: 0px;
-                   font-family: "Lucida Console", Monaco, monospace; font-size: 11px;
-                   text-align: left; color: #eeeeee; background-color: #000000 }
+            html { -khtml-user-select:none; -o-user-select: none; -moz-user-select: none;
+                   -webkit-user-select: none; user-select:none; }
+            body { margin-bottom: 0px; margin-left:0px; margin-right: 0px; margin-top: 0px;
+                   font-size: 1px; text-align:left; color:#eeeeee; background-color: #000000;
+                   font-family: "Lucida Console", Monaco, monospace; }
             table { border-spacing: 0px; }
-            a { color: #fefefe; text-decoration: none; }
+            a { color:#fefefe; text-decoration: none; }
             p { font-weight: normal; list-style: none outside none; padding: 5px 5px; }
-            ul { margin-top: 0; margin-bottom: 0; }
-            #profile { height: 100%; width: 100%; }
-            .fTle a { color: #fefefe !important; word-wrap: break-word; }
-            .fLst { list-style: none outside none; border: 0px; padding: 5px 5px; text-align: left; }
+            ul { margin-top: 0; margin-bottom:0; }
+            .fTle a { color: #fefefe !important; word-wrap:break-word; }
+            .fLst { list-style: none outside none; border:0px; padding:5px 5px; text-align: left; }
             .wdiv { position: absolute; z-index: 9; background-color: #202020;
-                    border: 2px solid #fefefe; resize: both; overflow: auto;} 
-            .wdivheader { cursor: move; z-index: 10; background-color: #fefefe; color: #111111; }
-            .closeBtn { float: right; color: #111111; z-index: 11; }
-            .mainCell { width: 100%; vertical-align: top; }
-            #resizeBtn { text-align: right; vertical-align: bottom; }
-            #winTable { height: 100%; vertical-align: top; }
+                    border: 2px solid #fefefe; resize: both; overflow:auto; }
+            .wdivheader { cursor: move; z-index:10; background-color: #fefefe; color: #111111; }
+            .closeBtn { float:right; color: #111111;z-index: 11; }
+            .mainCell { width: 100%; vertical-align:top; }
+            #profile {  height:100%; width: 100%; }
+            #resizeBtn {  text-align: right; vertical-align: bottom; }
+            #winTable { height:100%; vertical-align:top; }
         </style>
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
         <script>
