--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             .fLst { list-style: none outside none; border:0px; padding:5px 5px; text-align: left; }
             .wdiv { position: absolute; z-index: 9; background-color: #202020;
                     border: 2px solid #fefefe; resize: both; overflow:auto; }
-            .wdivheader { cursor: move; z-index:10; background-color: #fefefe; color: #111111; height: 17px; }
+            .wdivheader { cursor: move; z-index:10; background-color: #fefefe; color: #111111; }
             .closeBtn { float:right; color: #111111;z-index: 11; vertical-align: middle; }
             .mainCell { width: 100%; vertical-align:top; }
             #profile {  height:100%; width: 100%; }
