--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                 return cmdInput + ": command not found<br/>";
             }
 
-// handles console history
+            // handles console history, as well as send inputs to the command processor
 
             cnsAppndElm = document.getElementById("consappend");
             inputbxElem = document.getElementById("inputbox");
