--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                 var getip, getcc, getcn, getrc, getrn, getct, getzc, gettz, getlt, getlg, getmc, coordx, coordy;
 
                 $.ajax({
-                    url: "http://freegeoip.net/json/",
+                    url: "https://freegeoip.net/json/",
                     dataType: "json",
                     success: function(data) {
                         getip = " IP: " + data.ip;
