--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                                 welcomeMsg += worldmap[i][j];
                             }
                      
-                            var ipInfo;
+                            var ipInfo = "";
                             switch (true) {
                                 case i == 1:  ipInfo = "<b id='xmluip'></b>"; break;
                                 case i == 2:  ipInfo = "<b id='xmlctc'></b>"; break;
